[tool.poetry]
name = "bambo"
version = "1.0.0"
description = "A lightweight and efficient tool for performing load testing on your HTTP and HTTPS services."
authors = ["Subham Singh <subham.singh@hackerearth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tdqm = "^0.0.1"
requests = "^2.31.0"
ruff = "^0.1.9"
prettytable = "^3.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bambo = 'bamboo:main'
