[tool.poetry]
name = "bambo"
version = "1.0.3"
description = "A lightweight and efficient tool for performing load testing on your HTTP and HTTPS services."
authors = ["Subham Singh <geekysubham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
prettytable = "^3.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bambo = 'bambo.bamboo:main'
