[tool.poetry]
name = "bambo"
version = "2.0.0"
description = "A lightweight and efficient tool for performing load testing on your HTTP and HTTPS services."
authors = ["Subham Singh <geekysubham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
prettytable = "^3.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bambo = 'bambo.cli:main'

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.per-file-ignores]
"bin/**.py" = ["T201", "T203"]
"tests/**.py" = ["T201", "T203"]
"examples/**.py" = ["T201", "T203"]
